AVL: add range version with uint64_t keys
svn:sync-xref-src-repo-rev: r67962

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34214 2010-11-19 17:18:15Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34218 2010-11-21 17:00:38Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -361,6 +361,7 @@ RuntimeR3_SOURCES       = \
 	common/table/avlrpv.cpp \
 	common/table/avlruintptr.cpp \
 	common/table/avlrfoff.cpp \
+	common/table/avlru64.cpp \
 	common/table/avlu32.cpp \
 	common/table/avluintptr.cpp \
 	common/table/avlul.cpp \
