PDM/BlockCache: First part for #5295, move the writeback cache into a separate component
svn:sync-xref-src-repo-rev: r67963

--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33935 2010-11-10 15:37:02Z noreply@oracle.com $
+# $Id: Makefile.kmk 34219 2010-11-21 18:10:39Z alexander.eichner@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -166,7 +166,8 @@ VMMR3_SOURCES   = \
 	PATM/PATMGuest.cpp \
 	PATM/PATMA.asm \
 	PATM/PATMSSM.cpp \
-	PATM/VMMAll/PATMAll.cpp
+	PATM/VMMAll/PATMAll.cpp \
+	PDMBlkCache.cpp
 ifdef VBOX_WITH_VUSB
  VMMR3_SOURCES += PDMUsb.cpp
 endif
