--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34115 2010-11-16 14:07:25Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 34238 2010-11-22 13:50:18Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -30,12 +30,12 @@ ifdef VBOX_WITH_EFI
 endif
 ifdef VBOX_WITH_INTEL_PXE
  include $(PATH_SUB_CURRENT)/PC/PXE/Makefile.kmk
-else
- # Subdir with complex makefile.
- SUBDIRS_LIBRARIES += $(VBOX_PATH_DEVICES_SRC)/PC/Etherboot-src
- SUBDIRS_CLEAN     += $(VBOX_PATH_DEVICES_SRC)/PC/Etherboot-src
- # Disable the unsafe pass order optimizations.
- KBUILD_SAFE_PARALLEL = 1
+else ifndef VBOX_WITHOUT_ETHERBOOT
+  # Subdir with complex makefile.
+  SUBDIRS_LIBRARIES += $(VBOX_PATH_DEVICES_SRC)/PC/Etherboot-src
+  SUBDIRS_CLEAN     += $(VBOX_PATH_DEVICES_SRC)/PC/Etherboot-src
+  # Disable the unsafe pass order optimizations.
+  KBUILD_SAFE_PARALLEL = 1
 endif
 
 #
