--- a/src/VBox/Installer/darwin/Makefile.kmk
+++ b/src/VBox/Installer/darwin/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34275 2010-11-23 11:08:52Z noreply@oracle.com $
+# $Id: Makefile.kmk 34285 2010-11-23 13:42:25Z andreas.loeffler@oracle.com $
 ## @file
 # Install misc stuff and create dist packages for Mac OS X.
 #
@@ -647,7 +647,7 @@ VBOX_DI_VBAPP_OTHER_UNIVERSAL_BINS = \
 	MacOS/VMMR0.r0 \
 	MacOS/VBoxDDR0.r0 \
 	MacOS/VBoxDD2R0.r0 \
-   	MacOS/vmstarter
+	MacOS/vmstarter
 
 VBOX_DI_VBAPP_OTHER_BINS = \
 	MacOS/VMMGC.gc \
