Windows host installer: Now using VBoxRes.dll for own icons of ".vbox", ".vbox-extpack", ".ova" and ".ovf" file extensions.
svn:sync-xref-src-repo-rev: r68073

--- a/src/VBox/Installer/win/Makefile.kmk
+++ b/src/VBox/Installer/win/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32113 2010-08-31 08:51:21Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34315 2010-11-24 12:46:52Z andreas.loeffler@oracle.com $
 ## @file
 # Makefile for the Windows installer.
 #
@@ -22,6 +22,7 @@ ifneq ($(KBUILD_HOST),win)
  $(error "The Windows installer can only be built on Windows!")
 endif
 
+
 #
 # Include Sub-Makefiles.
 #
@@ -40,6 +41,9 @@ ifeq ($(KBUILD_TARGET_ARCH),x86)
   include $(PATH_SUB_CURRENT)/AutoStartMenu/Makefile.kmk
  endif
 endif
+
+include $(PATH_SUB_CURRENT)/Resources/Makefile.kmk
+
 
 #
 # Globals and targets.
