--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34393 2010-11-26 14:13:35Z noreply@oracle.com $
+# $Id: Makefile.kmk 34397 2010-11-26 15:06:16Z klaus.espenlaub@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -625,7 +625,6 @@ VBoxC_INTERMEDIATES =            \
 VBoxC_SOURCES = \
 	Global.cpp \
 	Logging.cpp \
-	VBoxDll.cpp \
 	USBDeviceImpl.cpp \
 	RemoteUSBDeviceImpl.cpp \
 	VirtualBoxBase.cpp \
