Main/VirtualBoxClient: new client-side singleton interface for convenient monitoring of VBoxSVC liveness, plus a big whitespace cleanup of the xidl file
svn:sync-xref-src-repo-rev: r68187

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34397 2010-11-26 15:06:16Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 34416 2010-11-26 17:17:12Z klaus.espenlaub@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -629,6 +629,7 @@ VBoxC_SOURCES = \
 	RemoteUSBDeviceImpl.cpp \
 	VirtualBoxBase.cpp \
 	VirtualBoxErrorInfoImpl.cpp \
+	VirtualBoxClientImpl.cpp \
 	ProgressImpl.cpp \
 	SharedFolderImpl.cpp \
 	SessionImpl.cpp \
