VBoxVideoGuest.h, VMMDev.h, Additions/WINNT/Graphics: refactoring of the display driver to make the VBVA infrastructure and modesetting functions OS-independent
svn:sync-xref-src-repo-rev: r68211

--- a/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33241 2010-10-19 16:37:06Z noreply@oracle.com $
+# $Id: Makefile.kmk 34438 2010-11-28 21:56:32Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxDisp.dll.
 #
@@ -46,6 +46,7 @@ VBoxDisp_SOURCES     = \
 	vrdpbmp.c \
 	vrdptext.c \
 	vbox.c \
+	$(PATH_ROOT)/src/VBox/Additions/common/VBoxVideo/HGSMIBase.cpp \
 	VBoxDisp.def \
 	VBoxDisp.rc
 
