Main/linux/USB and Installer/linux: switch to using our own device tree under /dev
svn:sync-xref-src-repo-rev: r68230

--- a/src/VBox/Installer/linux/Makefile.kmk
+++ b/src/VBox/Installer/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33185 2010-10-18 08:40:50Z noreply@oracle.com $
+# $Id: Makefile.kmk 34456 2010-11-29 12:20:42Z noreply@oracle.com $
 ## @file
 # Makefile for the Linux installer.
 #
@@ -65,6 +65,7 @@ linux-bin_INST = bin/
 linux-bin_MODE = a+rx,u+w
 linux-bin_SOURCES = \
         VBoxSysInfo.sh \
+        VBoxCreateUSBNode.sh \
 	VBox.sh=>VBox.sh \
 	$(if $(VBOX_WITH_PYTHON),$(PATH_ROOT)/src/VBox/Frontends/VBoxShell/vboxshell.py=>vboxshell.py,)
 
@@ -144,6 +145,7 @@ VBOX_LNX_NO_STRIP = \
 	  components/VirtualBox_XPCOM.xpt) \
 	$(if $(VBOX_WITH_PYTHON),vboxshell.py,) \
 	VBoxSysInfo.sh \
+	VBoxCreateUSBNode.sh \
 	VBox.sh \
 	VBox.png
 
