--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34466 2010-11-29 15:00:56Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34474 2010-11-29 15:39:51Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -953,6 +953,8 @@ RuntimeGuestR3_SOURCES                  := $(filter-out \
 	common/time/timesupref.cpp \
 	common/time/timesupA.asm \
 	common/time/timesup.cpp \
+	common/checksum/RTSha1Digest.cpp \
+	common/checksum/sha% \
 	generic/RTLogWriteUser-generic.cpp \
 	, $(RuntimeR3_SOURCES))
 RuntimeGuestR3_SOURCES              += \
