VBOX_ONLY_EXTPACKS preparations.
svn:sync-xref-src-repo-rev: r68262

--- a/src/VBox/Makefile.kmk
+++ b/src/VBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34089 2010-11-15 21:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34484 2010-11-29 17:45:20Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for src/VBox.
 #
@@ -29,16 +29,19 @@ ifdef VBOX_ONLY_ADDITIONS
  endif
  include $(PATH_SUB_CURRENT)/Additions/Makefile.kmk
 
-else ifdef VBOX_ONLY_TESTSUITE
- include $(PATH_SUB_CURRENT)/Runtime/Makefile.kmk
- include $(PATH_SUB_CURRENT)/HostDrivers/Makefile.kmk
- include $(PATH_SUB_CURRENT)/Additions/Makefile.kmk
- include $(PATH_SUB_CURRENT)/Testsuite/Makefile.kmk
-
 else ifdef VBOX_ONLY_DOCS
  include $(PATH_SUB_CURRENT)/Runtime/Makefile.kmk
  include $(PATH_SUB_CURRENT)/HostDrivers/Makefile.kmk
  include $(PATH_SUB_CURRENT)/Frontends/Makefile.kmk
+
+else ifdef VBOX_ONLY_EXTPACKS
+ include $(PATH_SUB_CURRENT)/Runtime/Makefile.kmk
+ include $(PATH_SUB_CURRENT)/Devices/Makefile.kmk
+ include $(PATH_SUB_CURRENT)/HostDrivers/Makefile.kmk
+ include $(PATH_SUB_CURRENT)/ExtPacks/Makefile.kmk
+ ifdef VBOX_WITH_VRDP
+  include $(PATH_SUB_CURRENT)/RDP/Makefile.kmk
+ endif
 
 else ifdef VBOX_ONLY_SDK
  include $(PATH_SUB_CURRENT)/Main/Makefile.kmk
@@ -47,6 +50,12 @@ else ifdef VBOX_ONLY_SDK
  endif
  include $(PATH_SUB_CURRENT)/Installer/Makefile.kmk
  include $(PATH_SUB_CURRENT)/Frontends/VBoxShell/Makefile.kmk
+
+else ifdef VBOX_ONLY_TESTSUITE
+ include $(PATH_SUB_CURRENT)/Runtime/Makefile.kmk
+ include $(PATH_SUB_CURRENT)/HostDrivers/Makefile.kmk
+ include $(PATH_SUB_CURRENT)/Additions/Makefile.kmk
+ include $(PATH_SUB_CURRENT)/Testsuite/Makefile.kmk
 
 else
  ifdef VBOX_WITH_MAIN
