--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34482 2010-11-29 17:31:31Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34484 2010-11-29 17:45:20Z knut.osmundsen@oracle.com $
 ## @file
 # Top level makefile.
 #
@@ -1006,10 +1006,11 @@ else
 endif
 
 
-VBOX_WITH_EXTPACK_OS_ARCHS ?= linux.amd64 linux.x86 solaris.amd64 solaris.x86 win.amd64 win.x86
-# +++  darwin.amd64 darwin.x86 freebsd.amd64 freebsd.x86 os2.x86
 extpacks-packing:
-	+ $(KMK) VBOX_ONLY_EXTPACKS=1 packing
+	+ $(KMK) VBOX_ONLY_EXTPACKS=1 \
+		VBOX_WITH_EXTPACK_OS_ARCHS="linux.amd64 linux.x86 solaris.amd64 solaris.x86 win.amd64 win.x86" \
+		packing
+# +++  darwin.amd64 darwin.x86 freebsd.amd64 freebsd.x86 os2.x86 ^^^
 
 .PHONY: \
 	extpacks-build-win.x86 \
