--- a/src/VBox/HostDrivers/Makefile.kmk
+++ b/src/VBox/HostDrivers/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33540 2010-10-28 09:27:05Z noreply@oracle.com $
+# $Id: Makefile.kmk 34484 2010-11-29 17:45:20Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VBox Host drivers.
 #
@@ -21,7 +21,9 @@ include $(KBUILD_PATH)/subheader.kmk
 # Include sub-makefiles.
 include $(PATH_SUB_CURRENT)/Support/Makefile.kmk
 
-if !defined(VBOX_ONLY_DOCS) && !defined(VBOX_ONLY_TESTSUITE)
+if  !defined(VBOX_ONLY_DOCS) \
+ && !defined(VBOX_ONLY_EXTPACKS) \
+ && !defined(VBOX_ONLY_TESTSUITE)
  ifdef VBOX_WITH_USB
   include $(PATH_SUB_CURRENT)/VBoxUSB/Makefile.kmk
  endif
