--- a/src/bldprogs/Makefile.kmk
+++ b/src/bldprogs/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 29715 2010-05-21 04:39:03Z noreply@oracle.com $
+# $Id: Makefile.kmk 34484 2010-11-29 17:45:20Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for various generic build tools (there is currently only one of them).
 #
@@ -29,7 +29,10 @@ biossums_SOURCES = biossums.c
 filesplitter_TEMPLATE = VBOXBLDPROG
 filesplitter_SOURCES = filesplitter.cpp
 
-if !defined(VBOX_ONLY_SDK) && !defined(VBOX_ONLY_ADDITIONS) && !defined(VBOX_ONLY_DOCS)
+if  !defined(VBOX_ONLY_ADDITIONS) \
+ && !defined(VBOX_ONLY_DOCS) \
+ && !defined(VBOX_ONLY_EXTPACKS) \
+ && !defined(VBOX_ONLY_SDK)
  PROGRAMS += scm
  scm_TEMPLATE = VBOXR3EXE
  scm_SOURCES = scm.cpp
@@ -38,3 +41,4 @@ if !defined(VBOX_ONLY_SDK) && !defined(VBOX_ONLY_ADDITIONS) && !defined(VBOX_ONL
 endif
 
 include $(KBUILD_PATH)/subfooter.kmk
+
