--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34474 2010-11-29 15:39:51Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34492 2010-11-29 23:57:12Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -57,7 +57,9 @@ else # !VBOX_ONLY_ADDITIONS && !VBOX_ONLY_TESTSUITE && !VBOX_ONLY_DOCS
  #
  # Normal build.
  #
- include $(PATH_SUB_CURRENT)/testcase/Makefile.kmk
+ ifndef VBOX_ONLY_EXTPACKS
+  include $(PATH_SUB_CURRENT)/testcase/Makefile.kmk
+ endif
  include $(PATH_SUB_CURRENT)/tools/Makefile.kmk
 
  BLDPROGS += uniread
