--- a/include/Makefile.kmk
+++ b/include/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34071 2010-11-15 15:35:10Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34556 2010-12-01 10:43:44Z knut.osmundsen@oracle.com $
 ## @file
 # Some hacks to allow syntax and prerequisite include checking of headers.
 # This makefile doesn't and shouldn't build successfully.
@@ -24,7 +24,8 @@ LIBRARIES = SyntaxVBoxIncludeR3 SyntaxVBoxIncludeR0 SyntaxVBoxIncludeRC
 # Omit headers that are using C++ features and upsets gcc.
 cpp_features_hdrs := \
 	VBox/hwaccm.h \
-	VBox/hwacc_vmx.h
+	VBox/hwacc_vmx.h \
+	VBox/HostServices/GuestControlSvc.h
 
 # Omit headers that are C++ and ring-3.
 r3_cpp_hdrs := \
