--- a/src/VBox/Installer/darwin/Makefile.kmk
+++ b/src/VBox/Installer/darwin/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34285 2010-11-23 13:42:25Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 34585 2010-12-01 18:52:26Z knut.osmundsen@oracle.com $
 ## @file
 # Install misc stuff and create dist packages for Mac OS X.
 #
@@ -572,7 +572,7 @@ ifdef VBOX_WITH_GUEST_CONTROL
  VBOX_DI_VBAPP_DYLIBS += \
 	MacOS/VBoxGuestControlSvc.dylib
 endif
-ifdef VBOX_WITH_VRDP
+if defined(VBOX_WITH_VRDP) && !defined(VBOX_WITH_EXTPACK_PUEL)
  VBOX_DI_VBAPP_DYLIBS += \
 	MacOS/VBoxVRDP.dylib
 endif
