--- a/src/VBox/Frontends/VBoxManage/Makefile.kmk
+++ b/src/VBox/Frontends/VBoxManage/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33590 2010-10-29 08:55:09Z vitali.pelenjow@oracle.com $
+# $Id: Makefile.kmk 34587 2010-12-01 20:30:02Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for VBoxManage (the cli frontend).
 #
@@ -49,7 +49,8 @@ else # !VBOX_ONLY_DOCS
  	VBoxManageModifyVM.cpp \
  	VBoxManageSnapshot.cpp \
  	VBoxManageStorageController.cpp \
- 	VBoxManageUSB.cpp
+ 	VBoxManageUSB.cpp \
+ 	VBoxManageBandwidthControl.cpp
 endif # !VBOX_ONLY_DOCS
 
 VBoxManage_DEFS      += \
