--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34416 2010-11-26 17:17:12Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 34587 2010-12-01 20:30:02Z alexander.eichner@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -318,6 +318,8 @@ VBoxSVC_SOURCES = \
 	DisplayUtils.cpp \
 	DisplayPNGUtil.cpp \
 	DisplayResampleImage.cpp \
+	BandwidthControlImpl.cpp \
+	BandwidthGroupImpl.cpp \
 	$(VBOX_AUTOGEN_EVENT_CPP) \
 	VRDEServerImpl.cpp \
 	$(if $(VBOX_WITH_XPCOM),xpcom/server.cpp,) \
