--- a/src/VBox/Main/webservice/Makefile.kmk
+++ b/src/VBox/Main/webservice/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33540 2010-10-28 09:27:05Z noreply@oracle.com $
+# $Id: Makefile.kmk 34594 2010-12-02 11:10:14Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox web service.
 #
@@ -243,6 +243,8 @@ ifdef VBOX_GSOAP_INSTALLED
 	$(VBOXWEB_OUT_DIR)/gsoap_copy_all_ts
  ifn1of ($(KBUILD_TARGET), win)
   $(VBOX_GSOAP_CXX_SOURCES)_CXXFLAGS = -Wno-format
+ else
+  $(VBOX_GSOAP_CXX_SOURCES)_CXXFLAGS.release = -O1
  endif
 
 ifdef VBOX_SOAP_PRECOMPILED_HEADER
