--- a/src/VBox/Main/webservice/Makefile.kmk
+++ b/src/VBox/Main/webservice/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34594 2010-12-02 11:10:14Z noreply@oracle.com $
+# $Id: Makefile.kmk 34601 2010-12-02 12:26:13Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox web service.
 #
@@ -244,7 +244,9 @@ ifdef VBOX_GSOAP_INSTALLED
  ifn1of ($(KBUILD_TARGET), win)
   $(VBOX_GSOAP_CXX_SOURCES)_CXXFLAGS = -Wno-format
  else
-  $(VBOX_GSOAP_CXX_SOURCES)_CXXFLAGS.release = -O1
+  ifeq ($(KBUILD_TARGET).$(KBUILD_TARGET_ARCH).$(KBUILD_TYPE),win.x86.release)
+   $(VBOX_GSOAP_CXX_SOURCES)_CXXFLAGS = -O1
+  endif
  endif
 
 ifdef VBOX_SOAP_PRECOMPILED_HEADER
