--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34620 2010-12-02 16:06:53Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34622 2010-12-02 16:19:11Z knut.osmundsen@oracle.com $
 ## @file
 # Top level makefile.
 #
@@ -992,9 +992,9 @@ endif
 
 extpacks-packing:
 	+ $(KMK) VBOX_ONLY_EXTPACKS=1 \
-		VBOX_WITH_EXTPACK_OS_ARCHS="linux.amd64 linux.x86 solaris.amd64 solaris.x86 win.amd64 win.x86" \
+		VBOX_WITH_EXTPACK_OS_ARCHS="darwin.amd64 darwin.x86 linux.amd64 linux.x86 solaris.amd64 solaris.x86 win.amd64 win.x86" \
 		packing
-# +++  darwin.amd64 darwin.x86 freebsd.amd64 freebsd.x86 os2.x86 ^^^
+# +++ freebsd.amd64 freebsd.x86 os2.x86 ^^^
 
 .PHONY: \
 	extpacks-build-win.x86 \
