--- a/src/VBox/Additions/WINNT/Installer/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Installer/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34363 2010-11-25 12:43:01Z noreply@oracle.com $
+# $Id: Makefile.kmk 34635 2010-12-02 17:39:57Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the Windows Guest Additions Installer.
 #
@@ -168,6 +168,7 @@ VB_WIN_ADD_NSIS_ENV := \
 	-E 'VBOX_WITH_WDDM=$(if $(VBOX_WITH_WDDM),0,0)' \
 	-E 'VBOX_BRAND_WIN_ADD_INST_DLGBMP=$(subst /,\,$(VBOX_BRAND_WIN_ADD_INST_DLGBMP))' \
 	-E 'VBOX_BRAND_LICENSE_RTF=$(subst /,\,$(VBOX_BRAND_LICENSE_RTF))' \
+	-E 'VBOX_BRAND_LICENSE_TXT=$(subst /,\,$(VBOX_BRAND_LICENSE_TXT))' \
 	$(foreach lang,$(VBOX_INSTALLER_ADD_LANGUAGES),-E 'VBOX_BRAND_$(lang)_LICENSE_RTF=$(VBOX_BRAND_$(lang)_LICENSE_RTF)') \
 	-E 'BUILD_TYPE=$(KBUILD_TYPE)' \
 	-E 'BUILD_TARGET_ARCH=$(KBUILD_TARGET_ARCH)'
@@ -230,6 +231,7 @@ $(PATH_BIN)/additions/VBoxWindowsAdditions-$(KBUILD_TARGET_ARCH).exe: \
 			$(if $(VBOX_SIGN_ADDITIONS),'/DVBOX_SIGN_ADDITIONS=1') \
 			$(if $(VBOX_SIGNING_MODE),'/DEXTERNAL_UNINSTALLER=1') \
 			$(if $(VBOX_INSTALLER_ADD_LANGUAGES),'/DVBOX_INSTALLER_ADD_LANGUAGES=1') \
+			$(if $(VBOX_BRAND_LICENSE_TXT),'/DVBOX_WITH_LICENSE_INSTALL_TXT=1') \
 			$(foreach lang,$(VBOX_INSTALLER_ADD_LANGUAGES),'/DVBOX_BRAND_$(lang)_LICENSE_RTF=1') \
 			'$(subst /,\,$<)'
 	$(call VBOX_SIGN_FILE_FN,$@)
