--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34648 2010-12-02 19:06:07Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34649 2010-12-02 19:09:09Z knut.osmundsen@oracle.com $
 ## @file
 # Top level makefile.
 #
@@ -673,7 +673,7 @@ VBOX_KMK_TIME = $(KBUILD_BIN_PATH)/kmk_time
 # @param    1  	os name.
 # @param    2   arch or *.
 #
-VBOX_RSYNC_IN_FN = rsync -a --delete --delete-excluded --prune-empty-dirs \
+VBOX_RSYNC_IN_FN = rsync -a -v --delete --delete-excluded --prune-empty-dirs \
 	--exclude .svn/ \
 	--exclude doc/Devices/ \
 	--exclude doc/tg/ \
