--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34650 2010-12-02 19:16:45Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34651 2010-12-02 19:18:15Z knut.osmundsen@oracle.com $
 ## @file
 # Top level makefile.
 #
@@ -687,7 +687,10 @@ VBOX_RSYNC_IN_FN = rsync -a -v --delete --delete-excluded --prune-empty-dirs \
 		--exclude tools/$(os).amd64/ \
 		--exclude out/$(os).amd64/ \
 		--exclude out/$(os).x86/ \
-	,$(select "$(2)" == "x86", --exclude out/$(os).amd64/, "$(2)" == "amd64", --exclude out/$(os).x86/)))
+	,$(select \
+		"$(2)" == "x86"  , --exclude out/$(os).amd64/$(KBUILD_TYPE)/, \
+		"$(2)" == "amd64", --exclude out/$(os).x86/$(KBUILD_TYPE)/) \
+	))
 
 #
 # Build the additions, all of them.
