Hacking in progress, enclosed in VBOX_ONLY_EXTPACKS_USE_IMPLIBS ifdefs for now.
svn:sync-xref-src-repo-rev: r68464

--- a/src/libs/Makefile.kmk
+++ b/src/libs/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34492 2010-11-29 23:57:12Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34662 2010-12-02 21:51:17Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the external libraries.
 #
@@ -79,7 +79,7 @@ if defined(VBOX_WITH_MAIN) \
  endif
 endif
 
-if !defined(VBOX_ONLY_TESTSUITE)
+if !defined(VBOX_ONLY_TESTSUITE) && !defined(VBOX_ONLY_EXTPACKS_USE_IMPLIBS)
  ifeq ($(SDK_VBOX_LIBXML2_INCS),$(PATH_ROOT)/src/libs/libxml2-2.6.30/include)
   include $(PATH_SUB_CURRENT)/libxml2-2.6.30/Makefile.kmk
  endif
