--- a/src/VBox/Makefile.kmk
+++ b/src/VBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34609 2010-12-02 14:04:24Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34662 2010-12-02 21:51:17Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for src/VBox.
 #
@@ -42,7 +42,9 @@ else ifdef VBOX_ONLY_EXTPACKS
   include $(PATH_SUB_CURRENT)/RDP/Makefile.kmk
  endif
  include $(PATH_SUB_CURRENT)/VMM/Makefile.kmk
- include $(PATH_SUB_CURRENT)/Disassembler/Makefile.kmk
+ ifndef VBOX_ONLY_EXTPACKS_USE_IMPLIBS
+  include $(PATH_SUB_CURRENT)/Disassembler/Makefile.kmk
+ endif
 
 else ifdef VBOX_ONLY_SDK
  include $(PATH_SUB_CURRENT)/Main/Makefile.kmk
