--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34492 2010-11-29 23:57:12Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34662 2010-12-02 21:51:17Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -52,6 +52,13 @@ else ifdef VBOX_ONLY_DOCS
  LIBRARIES += RuntimeR3
  DLLS += VBoxRT
 
+else ifdef VBOX_ONLY_EXTPACKS_USE_IMPLIBS
+ #
+ # Build docs only - need just regular R3 runtime.
+ #
+ LIBRARIES += RuntimeBldProg
+ IMPORT_LIBS += VBoxRTImp
+
 else # !VBOX_ONLY_ADDITIONS && !VBOX_ONLY_TESTSUITE && !VBOX_ONLY_DOCS
 
  #
@@ -63,6 +70,7 @@ else # !VBOX_ONLY_ADDITIONS && !VBOX_ONLY_TESTSUITE && !VBOX_ONLY_DOCS
  include $(PATH_SUB_CURRENT)/tools/Makefile.kmk
 
  BLDPROGS += uniread
+ IMPORT_LIBS += VBoxRTImp
  LIBRARIES += RuntimeR3 RuntimeBldProg RuntimeR0 RuntimeEFCPP RuntimeR3NoCRTGCC
  LIBRARIES.win += RuntimeR0Stub
  ifdef VBOX_WITH_RAW_MODE
@@ -1248,6 +1256,13 @@ VBoxRT:: VBoxRTDummy
   endif # chcon present.
  endif # building VBoxRT
 endif # linux
+
+#
+# VBoxRTImp - Import library/hack.
+#
+VBoxRTImp_TEMPLATE = VBoxR3Dll
+$(call VBOX_GENERATE_IMPORT_TARGET_FN,VBoxRTImp,VBox/VBoxRTImp.def,VBoxRT)
+
 
 #
 # RuntimeR3NoCRTGCC - CRT replacement lib for VBoxREM.
