--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34492 2010-11-29 23:57:12Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34662 2010-12-02 21:51:17Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -47,7 +47,9 @@ endif
 #
 # VMMR3.dll
 #
+ifndef VBOX_ONLY_EXTPACKS_USE_IMPLIBS
 LIBRARIES += VMMR3
+endif
 
 VMMR3_TEMPLATE  = VBoxR3Dll
 
@@ -310,6 +312,15 @@ if1of ($(VBOX_LDR_FMT), pe lx)
 		--output $@ $<
  endif
 endif # R0: pe + lx
+
+
+#
+# VMMR3Imp.lib
+#
+IMPORT_LIBS += VMMR3Imp
+VMMR3Imp_TEMPLATE = VBoxR3Dll
+$(call VBOX_GENERATE_IMPORT_TARGET_FN,VMMR3Imp,VMMR3/VMMR3.def,VBoxVMM)
+$(warning VMMR3Imp_SOURCES=$(VMMR3Imp_SOURCES))
 
 
 if defined(VBOX_WITH_RAW_MODE) && !defined(VBOX_ONLY_EXTPACKS)
