--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34662 2010-12-02 21:51:17Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34668 2010-12-02 23:33:28Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -211,7 +211,9 @@ SSM.cpp_DEFS +=	\
 #
 # The VMM DLL.
 #
+ifndef VBOX_ONLY_EXTPACKS_USE_IMPLIBS
 DLLS += VBoxVMM
+endif
 VBoxVMM_TEMPLATE = VBoxR3Dll
 VBoxVMM_DEFS = $(VMMR3_DEFS)
 VBoxVMM_DEFS.$(KBUILD_TARGET) = $(VMMR3_DEFS.$(KBUILD_TARGET))
@@ -318,9 +320,7 @@ endif # R0: pe + lx
 # VMMR3Imp.lib
 #
 IMPORT_LIBS += VMMR3Imp
-VMMR3Imp_TEMPLATE = VBoxR3Dll
-$(call VBOX_GENERATE_IMPORT_TARGET_FN,VMMR3Imp,VMMR3/VMMR3.def,VBoxVMM)
-$(warning VMMR3Imp_SOURCES=$(VMMR3Imp_SOURCES))
+$(call VBOX_GENERATE_IMPORT_TARGET_FN,VMMR3Imp,VBoxVMM,VMMR3/VMMR3.def)
 
 
 if defined(VBOX_WITH_RAW_MODE) && !defined(VBOX_ONLY_EXTPACKS)
