--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34668 2010-12-02 23:33:28Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34670 2010-12-03 00:27:42Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -58,6 +58,7 @@ else ifdef VBOX_ONLY_EXTPACKS_USE_IMPLIBS
  #
  LIBRARIES += RuntimeBldProg
  IMPORT_LIBS += VBoxRTImp
+ LIBRARIES.win += RuntimeR0Stub RuntimeRCStub
 
 else # !VBOX_ONLY_ADDITIONS && !VBOX_ONLY_TESTSUITE && !VBOX_ONLY_DOCS
 
