--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34672 2010-12-03 00:35:17Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34673 2010-12-03 00:51:42Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -59,6 +59,7 @@ else ifdef VBOX_ONLY_EXTPACKS_USE_IMPLIBS
  LIBRARIES += RuntimeBldProg
  IMPORT_LIBS += VBoxRTImp
  LIBRARIES.win += RuntimeR0Stub RuntimeRCStub
+ include $(PATH_SUB_CURRENT)/tools/Makefile.kmk
 
 else # !VBOX_ONLY_ADDITIONS && !VBOX_ONLY_TESTSUITE && !VBOX_ONLY_DOCS
 
