skip kStuff when building the extpacks
svn:sync-xref-src-repo-rev: r68477

--- a/src/libs/Makefile.kmk
+++ b/src/libs/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34668 2010-12-02 23:33:28Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34675 2010-12-03 00:58:44Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the external libraries.
 #
@@ -44,7 +44,7 @@ if defined(VBOX_WITH_LIBCURL) && !defined(VBOX_ONLY_EXTPACKS_USE_IMPLIBS) && !de
 endif
 
 # The kStuff lib used by IPRT and the debugger.
-ifdef IPRT_WITH_KSTUFF
+if defined(IPRT_WITH_KSTUFF) && !defined(VBOX_ONLY_EXTPACKS_USE_IMPLIBS)
  include $(PATH_SUB_CURRENT)/kStuff/Makefile.kmk
 endif
 
