Linux installer: properly handle VBoxExtPackHelperApp
svn:sync-xref-src-repo-rev: r68481

--- a/src/VBox/Installer/linux/Makefile.kmk
+++ b/src/VBox/Installer/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34584 2010-12-01 18:48:44Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34679 2010-12-03 08:56:15Z noreply@oracle.com $
 ## @file
 # Makefile for the Linux installer.
 #
@@ -153,6 +153,11 @@ VBOX_LNX_NO_STRIP = \
 	VBoxCreateUSBNode.sh \
 	VBox.sh \
 	VBox.png
+
+ifdef VBOX_WITH_EXTPACK
+ VBOX_LNX_STRIP_BIN += \
+	VBoxExtPackHelperApp
+endif
 
 # Qt4 GUI
 ifdef VBOX_WITH_QTGUI
