Main;FE/Qt4-OSX: change the icon on the password dialog
svn:sync-xref-src-repo-rev: r68542

--- a/src/VBox/Installer/darwin/Makefile.kmk
+++ b/src/VBox/Installer/darwin/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34723 2010-12-05 03:08:35Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34737 2010-12-06 11:21:23Z noreply@oracle.com $
 ## @file
 # Install misc stuff and create dist packages for Mac OS X.
 #
@@ -654,11 +654,11 @@ VBOX_DI_VBAPP_MISC_FILES = \
 	Info.plist \
 	PkgInfo \
 	Resources/virtualbox.icns \
+	Resources/virtualbox.png \
 	Resources/virtualbox-vbox.icns \
 	Resources/virtualbox-vbox-extpack.icns \
 	Resources/virtualbox-ovf.icns \
 	Resources/virtualbox-ova.icns \
-	Resources/virtualbox-vbox-128px.png \
 	MacOS/components/VBoxXPCOMBase.xpt \
 	MacOS/components/VirtualBox_XPCOM.xpt
 ifdef VBOX_WITH_DOCS_PACKING
