--- a/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32574 2010-09-16 17:44:29Z ramshankar.venkataraman@oracle.com $
+# $Id: Makefile.kmk 34801 2010-12-07 16:25:14Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the common guest addition code library.
 #
@@ -44,6 +44,7 @@ ifndef VBOX_ONLY_TESTSUITE
   	VBoxGuestR3LibXFree86
  endif
 endif
+LIBRARIES.win.amd64 += VBoxGuestR3Lib-x86
 
 
 #
@@ -133,6 +134,13 @@ VBoxGuestR3LibShared_TEMPLATE = VBOXGUESTR3DLL
 VBoxGuestR3LibShared_DEFS    := $(VBoxGuestR3Lib_DEFS)
 VBoxGuestR3LibShared_SOURCES := $(VBoxGuestR3Lib_SOURCES)
 VBoxGuestR3LibShared_INST    := $(INST_ADDITIONS_LIB)
+
+
+#
+# VBoxGuestR3Lib-x86 - an x86 (32-bit) variant of VBoxGuestR3Lib for 64-bit Windows.
+#
+VBoxGuestR3Lib-x86_EXTENDS      := VBoxGuestR3Lib
+VBoxGuestR3Lib-x86_BLD_TRG_ARCH := x86
 
 
 #
