--- a/src/VBox/Additions/WINNT/Graphics/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32622 2010-09-17 20:18:39Z noreply@oracle.com $
+# $Id: Makefile.kmk 34804 2010-12-07 17:00:39Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the Windows guest graphics driver.
 #
@@ -133,11 +133,11 @@ $(PATH_TARGET)/VBoxVideoWddmCat.dir/VBoxVideoWddm.sys: $$(TARGET_VBoxVideoWddm) 
 	$(INSTALL) -m 644 $< $(@D)
 
 ifdef VBOXWDDM_WITH_DISPD3D
-$(PATH_TARGET)/VBoxVideoWddmCat.dir/VBoxDispD3D.dll: $$(TARGET_VBoxDispD3D) | $$(call DIRDEP,$$(@D))
+$(PATH_TARGET)/VBoxVideoWddmCat.dir/VBoxDispD3D.dll: $$(TARGET_VBoxDispD3D$(if-expr "$(KBUILD_TARGET_ARCH)" == "amd64",-x86,)) | $$(call DIRDEP,$$(@D))
 	$(INSTALL) -m 644 $< $(@D)
 
- ifeq ($(KBUILD_TARGET_ARCH), amd64)
-$(PATH_TARGET)/VBoxVideoWddmCat.dir/VBoxDispD3D64.dll: $$(TARGET_VBoxDispD3D64) | $$(call DIRDEP,$$(@D))
+ ifeq ($(KBUILD_TARGET_ARCH),amd64)
+$(PATH_TARGET)/VBoxVideoWddmCat.dir/VBoxDispD3D64.dll: $$(TARGET_VBoxDispD3D) | $$(call DIRDEP,$$(@D))
 	$(INSTALL) -m 644 $< $(@D)
  endif
 endif
