--- a/src/VBox/Installer/solaris/Makefile.kmk
+++ b/src/VBox/Installer/solaris/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34632 2010-12-02 17:17:39Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 34816 2010-12-07 20:57:33Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the Solaris installer.
 #
@@ -179,6 +179,7 @@ SOLARIS_STRIP_EXES = \
 	$(if $(VBOX_WITH_VBOXSDL),VBoxSDL,) \
 	$(if $(VBOX_WITH_NETADP),VBoxNetAdpCtl,) \
 	VBoxNetDHCP \
+	$(if $(VBOX_WITH_EXTPACK),VBoxExtPackHelperApp,) \
 	VBoxSVC \
 	$(if $(VBOX_WITH_CROGL),VBoxTestOGL,) \
 	VBoxXPCOMIPCD \
