--- a/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34801 2010-12-07 16:25:14Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34848 2010-12-08 20:35:20Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxDisp.dll.
 #
@@ -73,7 +73,11 @@ VBoxDispD3D_NOINST = true
  endif
 VBoxDispD3D_NAME.amd64 = VBoxDispD3D64
 VBoxDispD3D_TEMPLATE = VBOXGUESTR3DLL
-VBoxDispD3D_DEFS     = UNICODE _UNICODE VBOX_WITH_WDDM VBOXWDDMDISP
+VBoxDispD3D_DEFS     = UNICODE _UNICODE VBOX_WITH_WDDM VBOXWDDMDISP LOG_TO_BACKDOOR
+ifdef DEBUG_misha
+VBoxDispD3D_DEFS    += LOG_ENABLED
+endif
+
 # VBoxDispD3D_DEFS    += VBOXDISPMP_TEST
 ifdef VBOXWDDM_WITH_VBVA
 VBoxDispD3D_DEFS    += VBOXWDDM_WITH_VBVA
