IPRT/r0drv: Added RTR0DbgKrnlInfoGetSymbol as a wrapper around RTR0DbgKrnlInfoQuerySymbol.
svn:sync-xref-src-repo-rev: r119708

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70138 2017-12-15 10:43:08Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70148 2017-12-15 14:08:52Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -2228,6 +2228,7 @@ RuntimeR0Drv_SOURCES    = \
 	r0drv/alloc-r0drv.cpp \
 	r0drv/initterm-r0drv.cpp \
 	r0drv/generic/semspinmutex-r0drv-generic.c \
+	r0drv/RTR0DbgKrnlInfoGetSymbol.cpp \
 	VBox/log-vbox.cpp \
 
 RuntimeR0Drv_SOURCES.amd64 = \
