Linux drivers: check for unresolved symbols at build time. bugref:4567: Linux kernel driver maintenance This change breaks the build if test builds of Linux kernel drivers contain unresolved symbols.  It saves the symbols produced during the vboxdrv and vboxguest builds and makes them available during the host modules and vboxsf builds respectively to prevent the IPRT symbols from coming up as missing.  It is not particularly elegant, in particular it uses the tst*.run test build targets for saving symbols, but seems to do the job.
svn:sync-xref-src-repo-rev: r119723

--- a/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70146 2017-12-15 14:06:56Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70161 2017-12-15 17:03:56Z noreply@oracle.com $
 ## @file
 # Makefile for the Cross Platform Guest Additions Driver.
 #
@@ -235,6 +235,7 @@ ifeq ($(KBUILD_TARGET),linux)
   && "$(KBUILD_TARGET)" == "linux" \
   && "$(KBUILD_HOST_ARCH)" == "$(KBUILD_TARGET_ARCH)"
   ifneq ($(KERN_DIR),)
+   save_symvers = vboxguest-src
    $(foreach module, vboxguest-src, $(evalcall2 VBOX_LINUX_GENERATE_KMOD_TEST))
   endif
  endif
