--- a/src/VBox/Additions/linux/Makefile.kmk
+++ b/src/VBox/Additions/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70084 2017-12-12 17:35:05Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70161 2017-12-15 17:03:56Z noreply@oracle.com $
 ## @file
 # Makefile for the linux guest additions base directory.
 #
@@ -363,7 +363,12 @@ if   defined(VBOX_WITH_TESTCASES) \
  && "$(KBUILD_TARGET)" == "linux" \
  && "$(KBUILD_HOST_ARCH)" == "$(KBUILD_TARGET_ARCH)"
  ifneq ($(KERN_DIR),)
-  $(foreach module, vboxsf-src vboxvideo-src, $(evalcall2 VBOX_LINUX_GENERATE_KMOD_TEST))
+  use_symvers = vboxguest-src
+  module      = vboxsf-src
+  $(evalcall2 VBOX_LINUX_GENERATE_KMOD_TEST)
+  use_symvers =
+  module      = vboxvideo-src
+  $(evalcall2 VBOX_LINUX_GENERATE_KMOD_TEST)
  endif
 endif
 
