--- a/src/VBox/HostDrivers/Makefile.kmk
+++ b/src/VBox/HostDrivers/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69534 2017-10-30 21:24:49Z noreply@oracle.com $
+# $Id: Makefile.kmk 70161 2017-12-15 17:03:56Z noreply@oracle.com $
 ## @file
 # Top-level makefile for the VBox Host drivers.
 #
@@ -77,6 +77,8 @@ if   defined(VBOX_WITH_TESTCASES) \
  && "$(KBUILD_HOST_ARCH)" == "$(KBUILD_TARGET_ARCH)"
 
  ifneq ($(KERN_DIR),)
+  save_symvers = vboxdrv-src
+  use_symvers  = vboxdrv-src
   $(foreach module, vboxdrv-src $(if $(VBOX_WITH_NETFLT),VBoxNetFlt-src) \
    $(if $(VBOX_WITH_NETADP),VBoxNetAdp-src) $(if $(VBOX_WITH_PCI_PASSTHROUGH),VBoxPci-src), \
    $(eval $(VBOX_LINUX_GENERATE_KMOD_TEST)))
