VBoxService,VBoxControl,VBoxGuest: Check exports on windows to make sure we don't directly make use of APIs that aren't available on ancient versions of NT.
svn:sync-xref-src-repo-rev: r119930

--- a/src/VBox/Additions/common/VBoxService/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxService/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70174 2017-12-15 23:38:40Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70330 2017-12-22 19:23:06Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the Cross Platform Guest Addition Services.
 #
@@ -186,6 +186,11 @@ endif
 
 VBoxServiceVMInfo.cpp_DEFS = VBOX_SVN_REV=$(VBOX_SVN_REV)
 VBoxServiceVMInfo.cpp_DEPS = $(VBOX_SVN_REV_KMK)
+
+VBoxService_USES.win += vboximportchecker
+VBoxService_VBOX_IMPORT_CHECKER.win.x86 = nt4
+VBoxService_VBOX_IMPORT_CHECKER.win.amd64 = xp64
+
 
 #
 # The icon is configurable.
