--- a/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70194 2017-12-18 13:39:39Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70330 2017-12-22 19:23:06Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the Cross Platform Guest Additions Driver.
 #
@@ -92,6 +92,9 @@ if1of ($(KBUILD_TARGET), darwin freebsd haiku netbsd os2 solaris win)
     	$(PATH_SDK_$(VBOX_WINDDK_GST)_LIB)/ntoskrnl.lib \
     	$(PATH_SDK_$(VBOX_WINDDK_GST)_LIB)/hal.lib
    endif
+   VBoxGuest_USES.win += vboximportchecker
+   VBoxGuest_VBOX_IMPORT_CHECKER.win.x86 = nt4/r0
+   VBoxGuest_VBOX_IMPORT_CHECKER.win.amd64 = xp64/r0
   endif # win
   ifn1of ($(KBUILD_TARGET), linux freebsd netbsd solaris haiku)
    VBoxGuest_SOURCES    = VBoxGuest-$(KBUILD_TARGET).cpp
@@ -180,6 +183,7 @@ if1of ($(KBUILD_TARGET), darwin freebsd haiku netbsd os2 solaris win)
   	$(PATH_SDK_$(VBOX_WINDDK_GST_NT4)_LIB)/ntoskrnl.lib \
   	$(PATH_SDK_$(VBOX_WINDDK_GST_NT4)_LIB)/hal.lib \
   	$(VBOX_LIB_VBGL_R0BASE)
+  ##@todo VBoxGuestNT3_VBOX_IMPORT_CHECKER.win.x86 = nt31/r0
  endif # win
 endif # enabled
 
