VBoxDisp.sys: Check exports.
svn:sync-xref-src-repo-rev: r119932

--- a/src/VBox/Additions/WINNT/Graphics/Video/disp/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Video/disp/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69976 2017-12-07 12:48:39Z vitali.pelenjow@oracle.com $
+# $Id: Makefile.kmk 70332 2017-12-22 19:28:49Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the Windows guest display driver.
 #
@@ -68,6 +68,9 @@ VBoxDisp_LIBS = \
 	$(PATH_SDK_$(VBOX_WINDDK_GST_NT4)_LIB)/win32k.lib \
 	$(VBOX_LIB_IPRT_GUEST_R0_NT4) \
 	$(VBOX_PATH_ADDITIONS_LIB)/HGSMIGuestR0Lib$(VBOX_SUFF_LIB)
+VBoxDisp_USES.win += vboximportchecker
+VBoxDisp_VBOX_IMPORT_CHECKER.win.x86 = nt4/r0
+VBoxDisp_VBOX_IMPORT_CHECKER.win.amd64 = xp64/r0
 
 # Signing requires both miniport and display drivers
 # so it'd be dealt with in the parent makefile.
