iprt/r0drv-nt: Working on NT 3.1 compatibility.
svn:sync-xref-src-repo-rev: r119936

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70309 2017-12-22 11:46:23Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70336 2017-12-24 14:38:14Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -2413,7 +2413,9 @@ RuntimeR0Drv_SOURCES.win = \
 	r0drv/nt/RTTimerGetSystemGranularity-r0drv-nt.cpp
 
 RuntimeR0Drv_SOURCES.win.amd64 := $(RuntimeWin64ASM_SOURCES)
-RuntimeR0Drv_SOURCES.win.x86   := $(RuntimeWin32ASM_SOURCES)
+RuntimeR0Drv_SOURCES.win.x86   := $(RuntimeWin32ASM_SOURCES) \
+	r0drv/nt/nt3fakes-stub-r0drv-nt.cpp
+
 
 RuntimeR0Drv_SOURCES.darwin = \
 	common/misc/thread.cpp \
